2002-11-27  Stanislav Brabec  <sbrabec@suse.cz>

	* gnome-pilot.m4: Added missing quotes:
	PISOCK_LIBS="-lpisock -lpisync"

2002-09-20  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: fix problem where -lpisync was not linked in if
	you didn't specify --with-pisock

2002-09-16  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: check for pilot-link 0.11.4 by default

2002-09-08  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode automake-1.4

2002-08-21  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: add -lpisync to PISOCK_LIBS

2002-05-15  JP Rosevear  <jpr@ximian.com>

	* gnome-pilot.m4: Fix quoting for AC_MSG_*

2002-03-10  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* Makefile.am:
	Distribute gnome-pilot.m4

2002-02-10  Chema Celorio  <chema@celorio.com>

	* Port to the GNOME 2.0 platform

2002-02-08  Chema Celorio  <chema@celorio.com>

	* configure.in: 0.12.0 here we go
2001-12-11  Israel Escalante <israel@ximian.com>

	* Release 0.10.0.

2001-11-28  Sebastian Rittau  <srittau@jroger.in-berlin.de>

	* gnome-pilot.m4 (PILOT_LINK_HOOK):
	Fixed a typo: inlude -> include

2001-10-24  jacob berkman  <jacob@ximian.com>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): do a test that is not
	only always false, but works with autoconf 2.52 and isn't trying
	to be too smart

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Complete intltool support.

2001-10-02  Darin Adler  <darin@bentspoon.com>

	* autogen.sh: Add intltool support.

2001-09-16  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	PISOCK_CFLAGS no longer contains pilot-link version.

2001-09-09  Eskil Heyn Olsen  <eskil@eskil.dk>

	* gnome-pilot.m4:
	Stuff to check version of gnome-pilot

2001-08-20  Pavel Roskin  <proski@gnu.org>

	* gnome-undelfs.m4 (GNOME_UNDELFS_CHECKS): Specify additional
	includes when testing for ext2fs/ext2fs.h.

	* gnome-vfs.m4 (GNOME_WITH_VFS): Specify additional includes
	when testing for rpc/pmap_clnt.h.  Needed for Autoconf 2.50+